--- a/index.htm
+++ b/index.htm
@@ -288,7 +288,7 @@
 						<figure class="effect-bubba">
 							<img src="assets\images\item-8.jpg" alt="img01">
 							<figcaption>
-								<h2 ><a href="https://codedojojs.github.io/GlostBusters/">Охотники за <span>привидениями: Наследники</span></a></h2>
+								<h2 ><a href="https://codedojojs.github.io/GlostBusters/">Охотники за <span>привидениями</span></a></h2>
 								<p>Если понравилось, кликни для просмотра работы</p>
 							</figcaption>
 						</figure>
